feat(styles): Add Dark Mode Support

--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -3,8 +3,45 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Canterell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    width: 100vw;
+    height: 100vh;
+}
+
+/* 
+* Theme toggle settings
+*/
+@media (prefers-color-scheme: dark) {
+    /* Dark theme */
+    
+    body {
+        background: #333;
+        color: white;
+    }
+
+    a:-webkit-any-link {
+        color: white;
+    }
+    
+}
+
+@media (prefers-color-scheme: light) {
+    /* Light theme */
+    body {
+        background: #ddd;
+        color: black;
+    }
+
+    a:-webkit-any-link {
+        color: black;
+    }
+    
 }
   
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
 }
