--- a/packages/renderer/src/app.css
+++ b/packages/renderer/src/app.css
@@ -1,8 +1,36 @@
 .app {
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+    width: 100%;
+    height: 100%;
   }
   
   button {
     font-size: 20px;
     padding: 2rem ;
+  }
+  
+  .sidebar-wrapper {
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
+    margin-right: 20px;
+    width: 16vw;
+  }
+  
+  .main-wrapper {
+    display: block;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
   }
